<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_planIt"
        android:layout_width="330dp"
        android:layout_height="178dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="119dp"
        android:text="@string/plan_it"
        android:textColor="#000000"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_planet"
        android:layout_width="43dp"
        android:layout_height="61dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="126dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hiclipart"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button_planAnEvent"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="66dp"
        android:text="@string/plan_an_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planIt" />

    <Button
        android:id="@+id/button_BrowseAvailableEvents"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/browse_available_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_planAnEvent" />

</androidx.constraintlayout.widget.ConstraintLayout>