<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_helpChoose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button_bg"
        android:padding="15dp"
        android:text="?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_createYour" />

    <Button
        android:id="@+id/button_BackChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="155dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ChooseFromTemplate" />

    <TextView
        android:id="@+id/textView_letsPlanchoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="141dp"
        android:text="@string/let_s_plan_your_party"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ChooseFromTemplate"
        android:layout_width="136dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="140dp"
        android:text="@string/choose_from_template"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_letsPlanchoose" />

    <Button
        android:id="@+id/button_createYour"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="27dp"
        android:text="@string/create_your_own"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_letsPlanchoose" />


</androidx.constraintlayout.widget.ConstraintLayout>