<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/letsPlan1cText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="62dp"
        android:text="@string/let_s_plan_your_party"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/helpPlan1cButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/custom_button_bg"
        android:padding="15dp"
        android:text="?"
        app:layout_constraintEnd_toStartOf="@+id/nextPlan1cButton"
        app:layout_constraintStart_toEndOf="@+id/backPlan1cButton"
        app:layout_constraintTop_toBottomOf="@+id/desccEditText" />

    <Button
        android:id="@+id/backPlan1cButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desccEditText" />

    <Button
        android:id="@+id/nextPlan1cButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desccEditText" />

    <Spinner
        android:id="@+id/partyTypeSpinner"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:entries="@array/partyTypeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letsPlan1cText" />

    <EditText
        android:id="@+id/desccEditText"
        android:layout_width="378dp"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desccTextView" />

    <TextView
        android:id="@+id/partyTypecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="58dp"
        android:text="@string/party_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letsPlan1cText" />

    <TextView
        android:id="@+id/numOfGuestscTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="28dp"
        android:text="@string/of_guests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partyTypeSpinner" />

    <TextView
        android:id="@+id/ctextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="72dp"
        android:text="Budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfcEditText" />

    <TextView
        android:id="@+id/WherecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="13dp"
        android:text="@string/where_is_the_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetcEditText" />

    <EditText
        android:id="@+id/wherecEditText"
        android:layout_width="138dp"
        android:layout_height="42dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctextView11"
        android:autofillHints="" />

    <TextView
        android:id="@+id/ctextView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="28dp"
        android:text="@string/when_is_the_event_mm_dd_yy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wherecEditText" />

    <EditText
        android:id="@+id/whencEditText"
        android:layout_width="147dp"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WherecTextView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/desccTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="28dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctextView17" />

    <EditText
        android:id="@+id/numOfcEditText"
        android:layout_width="138dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partyTypecTextView" />

    <EditText
        android:id="@+id/budgetcEditText"
        android:layout_width="138dp"
        android:layout_height="42dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfGuestscTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>